GAB-25: replace hardcoded filters with Mongo-backed Filter model